{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 27,
  "lineage": "5358732c-3a13-08c2-0061-508863b3bbb9",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006f006a838fcd23d",
            "association_id": "eipassoc-0f2557f456a81ecbf",
            "domain": "vpc",
            "id": "eipalloc-006f006a838fcd23d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0869edf207538d5a5",
            "private_dns": "ip-10-0-1-83.ap-south-1.compute.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-43-205-174-77.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.174.77",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:internet-gateway/igw-07735cf874b232888",
            "id": "igw-07735cf874b232888",
            "owner_id": "830426696658",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006f006a838fcd23d",
            "connectivity_type": "public",
            "id": "nat-0ec87c6777c3a1246",
            "network_interface_id": "eni-0869edf207538d5a5",
            "private_ip": "10.0.1.83",
            "public_ip": "43.205.174.77",
            "subnet_id": "subnet-0037a6baf758a7bcb",
            "tags": {
              "Name": "demo-NAT Gateway"
            },
            "tags_all": {
              "Name": "demo-NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:route-table/rtb-0b6ae3175357c7ddb",
            "id": "rtb-0b6ae3175357c7ddb",
            "owner_id": "830426696658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec87c6777c3a1246",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-private route table"
            },
            "tags_all": {
              "Name": "demo-private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:route-table/rtb-02d71eaf3e87ad5f8",
            "id": "rtb-02d71eaf3e87ad5f8",
            "owner_id": "830426696658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07735cf874b232888",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public route table"
            },
            "tags_all": {
              "Name": "demo-public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb52d2caa8e379e6",
            "route_table_id": "rtb-0b6ae3175357c7ddb",
            "subnet_id": "subnet-0d1b87bc101538929"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d730df57899dd1a",
            "route_table_id": "rtb-0b6ae3175357c7ddb",
            "subnet_id": "subnet-013041bab65379a92"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c8122a7f1f6be5",
            "route_table_id": "rtb-02d71eaf3e87ad5f8",
            "subnet_id": "subnet-0037a6baf758a7bcb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078b22a9163ee1232",
            "route_table_id": "rtb-02d71eaf3e87ad5f8",
            "subnet_id": "subnet-0bc598237cc967acb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:security-group/sg-0635111f5bd091288",
            "description": "enable http/https access on port 80/443 \u0026 dynamodb 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0635111f5bd091288",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "830426696658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysg0001"
            },
            "tags_all": {
              "Name": "mysg0001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:subnet/subnet-0d1b87bc101538929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b87bc101538929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830426696658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private subnet az1"
            },
            "tags_all": {
              "Name": "demo-private subnet az1"
            },
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:subnet/subnet-013041bab65379a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013041bab65379a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830426696658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private subnet az2"
            },
            "tags_all": {
              "Name": "demo-private subnet az2"
            },
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:subnet/subnet-0037a6baf758a7bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0037a6baf758a7bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830426696658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-pub_subnet_az1"
            },
            "tags_all": {
              "Name": "demo-pub_subnet_az1"
            },
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:subnet/subnet-0bc598237cc967acb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc598237cc967acb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830426696658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-pub_subnet_az2"
            },
            "tags_all": {
              "Name": "demo-pub_subnet_az2"
            },
            "vpc_id": "vpc-0efc998a91f879e50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:830426696658:vpc/vpc-0efc998a91f879e50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb81c3e2033aaf46",
            "default_route_table_id": "rtb-0dda1cd4c10f17a17",
            "default_security_group_id": "sg-0c7d0a4b90f29e1a4",
            "dhcp_options_id": "dopt-0bf121c332e4d0b84",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0efc998a91f879e50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dda1cd4c10f17a17",
            "owner_id": "830426696658",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}